assets/css/style.css
@media(max-width: 639px) {
  #nav-bar {
    min-height: 48px;
  }
}
/* Body styling */
* {
  margin:0;
  padding:0;
  border:0;
}
body {
  font-family: arial, helvetica, sans-serif;
}
/* General div styling */
div {
  text-align: center;
  color: #ffff; 
}
/* Header styling */  
@media screen and (max-width: 943px){
}
/* Navigation bar styling */
.navbar {
  text-align: center;
  font-size: large;
  font-weight: 700;
  background-color:#000;
  color: #881919;
}
.navbar, ul li {
  float: none;
}
/* Our home page hero image */
/* Image and Its copyright belongs to the Artist and / Band via: https://unsplash.com/s/photos/musician/ */
.hero-image {
  background: url("https://images.unsplash.com/photo-1504960868016-9a59a5172321?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80") no-repeat center;
  background-size: cover;
  width: 100%;
  height: 500px;
  position: relative;
}
/* Hero image text styling */
/* Copied from https://freefrontend.com/css-glow-text-effects/ */
.hero-text {  
  text-align: center;
  font-size: 6em;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-shadow: 0 0 0.6rem #ffe6ff, 0 0 1.5rem #ff65bd,
    -0.2rem 0.1rem 1rem #ff65bd, 0.2rem 0.1rem 1rem #ff65bd,
    0 -0.5rem 2rem #ff2483, 0 0.5rem 3rem #ff2483;
  animation: shine 2s forwards, flicker 3s infinite;
}
.responsive {
  max-width: 100%;
  height: auto;
}
/* Media querie */
/* For mobile phones: */
[class*="col-"] {
    width: 100%;
}
/* For tablets: */
@media only screen and (min-width: 600px){
.col-s-1 {width: 8.33%;}
.col-s-2 {width: 16.66%;}
.col-s-3 {width: 25%;}
.col-s-4 {width: 33.33%;}
.col-s-5 {width: 41.66%;}
.col-s-6 {width: 50%;}
.col-s-7 {width: 58.33%;}
.col-s-8 {width: 66.66%;}
.col-s-9 {width: 75%;}
.col-s-10 {width: 83.33%;}
.col-s-11 {width: 91.66%;}
.col-s-12 {width: 100%;}
}
/* For desktop: */
@media only screen and (min-width: 768px){
.col-s-1 {width: 8.33%;}
.col-s-2 {width: 16.66%;}
.col-s-3 {width: 25%;}
.col-s-4 {width: 33.33%;}
.col-s-5 {width: 41.66%;}
.col-s-6 {width: 50%;}
.col-s-7 {width: 58.33%;}
.col-s-8 {width: 66.66%;}
.col-s-9 {width: 75%;}
.col-s-10 {width: 83.33%;}
.col-s-11 {width: 91.66%;}
.col-s-12 {width: 100%;}    
}
/* Style the counter cards */
.card .btn {
  background-color: black;
  border-color: white;
  border-radius: 15px;
  min-width: 100px;
  font-weight: bold;
  margin-top: 10px;
  color: #fff;
}
.card .btn:hover {
  opacity: 0.8;
  background-color: black;
  color: white;
}
/* Band Carousel */
/* Make the image fully responsive */
.carousel-inner img {
  width: 100%;
  height: 100%;
}
/* Upcoming show table styling */
.table {
  color: #000;
  background-color:white;
  border-color: black;
}
.thead, th {
  background-color: #009999;
}
/* Buy tickets button styling */
.btn {
  background-color: black;
  border-color: white;
  border-radius: 15px;
  min-width: 100px;
  font-weight: bold;
  margin-top: 10px;
  color: #fff;
}
.btn:hover {
  opacity: 1;  
}
/* END OF PAGE Footer */
.footer {  
  padding: 1em;
  margin-top: 20px;
  margin: 0 auto;
  position: relative;
}
/* Social media icon styling */
/* Copied from https://www.w3schools.com */
div .social-media {
  padding: 0;
  margin: 1em;
  transition: all 0.35s ease-in-out;
  -moz-transition: all 0.35s ease-in-out;
  -webkit-transition: all 0.35s ease-in-out;
  -o-transition: all 0.35s ease-in-out
}
.fa-facebook {
  color: #3386FF;
  padding: 5px;
  border-radius: 5px;
  width: 36px;
  height: 36px;
  font-size: 30px;
}
.fa-youtube {
  color: #bb0000;
  padding: 5px;
  border-radius: 5px;
  width: 36px;
  height: 36px;
  font-size: 30px;
}
.fa-twitter {
  color: #f1f1f1;
  padding: 5px;
  border-radius: 5px;
  width: 36px;
  height: 36px;
  font-size: 30px;
}
.fa-instagram {
  color: #FC0069;
  padding: 5px;
  border-radius: 5px;
  width: 36px;
  height: 36px;
  font-size: 30px;
}
/* Add a hover effect if you want */
.fa:hover {
  opacity: 0.7;
  background: silver;
  text-decoration: none;
}
/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
@media screen and (max-width: 800px) {
.leftcolumn, .rightcolumn {   
  width: 100%;
  padding: 0;
}
}
/* About text styling */
.container-fluid {
  font-family: arial, helvetica, sans-serif;
  font-size: 18px;    
  text-align: left;
  padding: 1em;
  margin: 0 auto;
}
/* Discography styling */
* {
  box-sizing: border-box;
}
/* Float four columns side by side */
.column {
  float: left;
  width: 25%;
  padding: 0 10px;
}
/* Remove extra left and right margins, due to padding */
.row {
  margin: 0 -5px;}

/* Clear floats after the columns */
.row:after {
  content: "";
  display: table;
  clear: both;
}

/* Responsive columns */
@media screen and (max-width: 600px) {
.column {
  width: 100%;
  display: block;
  margin-bottom: 20px;
  padding: 1rem;
  }
}
/* Style the counter cards */
.card {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  padding: 16px;
  text-align: left;
  background-color:white;
  color: #000;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 18px;
}
/* Remove extra left and right margins, due to padding */
.row {margin: 0 -5px;}
/* Clear floats after the columns */
.row:after {
  content: "";
  display: table;
  clear: both;
}
/* Create three equal columns that floats next to each other */
.column {
  float: left;
  width: 33.33%;
  padding: 10px;
  color: #000000;
}
/* Clear floats after the columns */
.row:after {
  content: "";
  display: table;
  clear: both;
}

/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
@media screen and (max-width: 600px) {
.column {
  width: 100%;
  }
}
/* Video iframe container styling */
.resp-container {
  background-color: #000;  
  position: relative;
  width: 100%;
  overflow: hidden;
  padding-top: 75%; /* 4:3 Aspect Ratio */ 
}
.responsive-iframe {
  background-color: #000;  
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100%;
  border: 0;
}
/* Email newsletter form styling */
form {
  border: 3px solid #f1f1f1;
  font-family: arial;
}
.container {
  padding: 20px;
  background-color:#f1f1f1;
  color: #000;
  text-align: left;
}
input[type=text], input[type=submit] {
  width: 100%;
  padding: 12px;
  margin: 8px 0;
  display: inline-block;
  border: 1px solid #ccc;
  box-sizing: border-box;
}
input[type=checkbox] {
  margin-top: 16px;
}
input[type=submit] {
  background-color: #000;
  color: white;
  border: none;
}
input[type=submit]:hover {
  opacity: 0.8;
}
/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
@media screen and (max-width: 600px) {
  .column {
    width: 100%;
  }
/* Confirmation button */
.button {
  color: #fff;
  background-color: orangered;
  text-align: center;
  text-decoration: none;
  width: 100%;
  padding: 12px;
  margin: 8px 0;
  display: inline-block;
  border: 1px solid #ccc;
  box-sizing: border-box;
}
.button:hover {background-color:#000; color: #f1f1f1}
.button:active {
  background-color: #000;
  transform: translateY(4px);
}
}
/* Contact page image */
.img-fluid {
  width: 100% \9;
  height: auto;
}

